--- a/aio/content/examples/toh-pt5/src/app/app.component.html
+++ b/aio/content/examples/toh-pt5/src/app/app.component.html
@@ -4,9 +4,9 @@
 <!-- #enddocregion outlet -->
 <nav>
   <!-- #enddocregion heroes -->
-  <a routerLink="/dashboard">Dashboard</a>
+  <a [routerLink]="/dashboard">Dashboard</a>
   <!-- #docregion heroes -->
-  <a routerLink="/heroes">Heroes</a>
+  <a [routerLink]="/heroes">Heroes</a>
 </nav>
 <!-- #docregion outlet -->
 <router-outlet></router-outlet>
